[package]
name = "vince-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3", default-features = false }
directories = "6"
eframe = { version = "0.31", default-features = false, features = ["glow"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = { version = "0.15", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
